# random-picker

./: .gitignore  .goreleaser.yml  Cargo.toml  README.md  go.mod
.github/workflows/: release.yml
cmd/random-picker/: main.go
internal/cache/: cache.go
internal/commands/: commands.go
internal/config/: config.go
internal/models/: models.go
internal/picker/: picker.go
src/: dirs.rs  games.rs  group.rs  item.rs  main.rs  setting.rs
