[package]
name = "rp"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
directories = "6.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "z"   # "s" for small size, "z" for even smaller size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce codegen units to allow better optimizations
panic = "abort"   # Abort on panic to avoid generating unwinding code
strip = true      # Automatically strip debug symbols (if supported)
